removing duplicate toronto_pop

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -489,11 +489,10 @@ You *can* do this in R, however we can very easily introduce errors using this m
 ```{r include = F}
 toronto_eng <- filter(official_langs, region == "Toronto" & language == "English") %>% pull(most_at_home)
 toronto_fr <- filter(official_langs, region == "Toronto" & language == "French") %>% pull(most_at_home)
-toronto_pop <- city_populations[1]
 ```
 
 Instead, let's use the `case_when` function. When used inside the `mutate` function, `case_when` will allow us to mutate a variable *when* a particular condition is met.
-We write the condition on the left side of the tilde (`~`) symbol and the mutation on the right side. Let's consider just Toronto to start. We want to take the `most_at_home` value for English in Toronto  (`r format(toronto_eng, scientific = FALSE, big.mark = ",")`) and divide it by Toronto's population  (`r format(toronto_pop, scientific = FALSE, big.mark = ",")`). We also want to divide the `most_at_home` value for French in Toronto  (`r format(toronto_fr, scientific = FALSE, big.mark = ",")`) and divide it by Toronto's population. So when `region == Toronto` (condition), we want to apply `most_at_home/5928040` (mutation). We do the same for the other cities, which is what you see in the code below. 
+We write the condition on the left side of the tilde (`~`) symbol and the mutation on the right side. Let's consider just Toronto to start. We want to take the `most_at_home` value for English in Toronto  (`r format(toronto_eng, scientific = FALSE, big.mark = ",")`) and divide it by Toronto's population  (`r format(toronto_popn, scientific = FALSE, big.mark = ",")`). We also want to divide the `most_at_home` value for French in Toronto  (`r format(toronto_fr, scientific = FALSE, big.mark = ",")`) and divide it by Toronto's population. So when `region == Toronto` (condition), we want to apply `most_at_home/5928040` (mutation). We do the same for the other cities, which is what you see in the code below. 
 
 ```{r 02-case-when}
 mutate(official_langs,
