added filter cases with or and AND

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -363,6 +363,22 @@ official_langs <- filter(lang_no_delimiter, category == "Official languages")
 official_langs
 ```
 
+### Using `filter` to extract rows with `&` 
+
+Let's suppose we want to look at only the rows for English in Vancouver. We are looking for the rows, where `region == "Vancouver"` AND `language == "English"`. Here we want to filter the data set to find rows that satisfy multiple conditions simultaneously. We can do this with the `&` logical operator, as we show below.
+
+```{r}
+filter(official_langs, region == "Vancouver" & language == "English")
+```
+
+### Using `filter` to extract rows with `|`
+
+Suppose we were interested in the rows for only the Albertan cities (Edmonton and Calgary) in our data set. We can't use `&` as we did above because `region` cannot be both Edmonton and Calgary at once. Instead, we can use the `|` logical operator, which gives us the cases where one condition OR another condition is satisfied. In the code below, we ask R to return the rows where the `region` columns are equal to "Calgary" OR "Edmonton".
+
+```{r}
+filter(official_langs, region == "Calgary" | region == "Edmonton")
+```
+
 ### Using `filter` to extract rows with `%in%`
 
 Suppose we want to see the populations of our five cities. The `region_data` data set from the `canlang` package contains statistics for number of households, land area, population and number of dwellings for different regions according to the 2016 Canadian census.
