changing T to TRUE

--- a/index.Rmd
+++ b/index.Rmd
@@ -208,7 +208,7 @@ functions once loaded. The `read_csv` function, in particular, can be made acces
 `tidyverse` contains many functions, which allow us to load, clean, wrangle and visualize data. 
 
 
-```{r load_tidyverse, message=T}
+```{r load_tidyverse, message = TRUE, warning = TRUE}
 library(tidyverse)
 ```
 > **In case you want to know more (optional):** 
