adding distinction between & and comma in filter

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -372,12 +372,19 @@ What if we want all the other language categories in the data set *except* for t
 filter(lang_no_delimiter, category != "Official languages")
 ```
 
-### Using `filter` to extract rows with `&` 
+### Using `filter` to extract rows with `,` &` 
 
 Let's suppose we want to look at only the rows for English in Vancouver. Here we want to filter the data set to find rows that satisfy multiple conditions simultaneously. We can do this with `&`, which is a logical operator meaning "AND". We are filtering the `official_langs` data frame where the `region` equals "Vancouver" AND the `language` equals "English".  
 
 ```{r}
 filter(official_langs, region == "Vancouver" & language == "English")
+```
+
+Notice that we can accomplish the same thing using a comma `,` instead of the ampersand sign `&`. 
+The `filter` function treats the comma `,` between the logical statements as an "AND". 
+
+```{r}
+filter(official_langs, region == "Vancouver" , language == "English")
 ```
 
 ### Using `filter` to extract rows with `|`
