--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -17,7 +17,7 @@ By the end of the chapter, readers will be able to:
 - define the following:
     - absolute file path
     - relative file path
-    - **u**niform **r**esource **l**ocator (URL)
+    - **U**niform **R**esource **L**ocator (URL)
 - read data into R using a relative path and a URL
 - compare and contrast the following functions:
     - `read_csv` 
@@ -93,6 +93,7 @@ But the relative path from inside the `project` folder (`data/happiness_report.c
 folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name 
 on each computer) and where the files and folders happen to be located on that particular computer. -->
 
+
 See this video for another explanation: 
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/ephId3mYu9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -167,7 +168,8 @@ canlang_data
 To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3. How did we know to skip 3 lines? We looked at the data! Open your data in a text editor and look at the file to decide how many lines to skip. 
 
 ```{r}
-canlang_data <- read_csv("data/can_lang_meta-data.csv", skip = 3)
+canlang_data <- read_csv("data/can_lang_meta-data.csv", 
+                         skip = 3)
 canlang_data
 ```
 
@@ -185,14 +187,29 @@ To get this into R using the `read_delim()` function, we specify the first argum
 
 
 ```{r}
-canlang_data <- read_delim("data/can_lang.tsv", delim = "\t", col_names = FALSE)
+canlang_data <- read_delim("data/can_lang.tsv", 
+                           delim = "\t", 
+                           col_names = FALSE)
 canlang_data
 ```
 
-Data frames in R need to have column names, thus if you read data into R as a data frame without column names then R assigns column names for them. If you used the `read_*` functions to read the data into R, then R gives each column a name of X1, X2, ..., XN, where N is the number of columns in the data set.
+Data frames in R need to have column names, thus if you read data into R as a data frame without column names then R assigns column names for them. If you used the `read_*` functions to read the data into R, then R gives each column a name of `X1, X2, ..., XN`, where N is the number of columns in the data set.
+
+It is best to rename your columns to help differentiate between them (e.g. `X1, X2`, etc., are not very descriptive names and will make it more confusing as you code). To rename your columns, you can use the `rename` function from the `dplyr` package, one of the packages loaded with `tidyverse`, so we don't need to load it separately. The first argument is the data set, and in the subsequent arguments you write `new_name = old_name` for the selected variables to rename. We rename the `X1, X2, ..., X6` columns in the `canlang_data` data frame to more descriptive names below. 
+
+```{r 01-rename-columns}
+canlang_data <- rename(canlang_data,
+       category = X1, 
+       language = X2, 
+       mother_tongue = X3,
+       most_at_home = X4, 
+       most_at_work = X5, 
+       lang_known = X6)
+canlang_data
+```
 
 ### Reading tabular data directly from a URL
-We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a **u**niform **r**esource **l**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
+We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a **U**niform **R**esource **L**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
 
 ```{r}
 canlang_data <- read_csv("https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv")
