--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -57,7 +57,7 @@ read in the `.csv` file named `happiness_report.csv` into R, we could do this us
 We show both choices below.
 
 ```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840"}
-knitr::include_graphics("img/file-system-for-export-to-intro-datascience.svg")
+knitr::include_graphics("img/filesystem.jpeg")
 ```
 
 **Reading `happiness_report.csv` using a relative path:**
