editing long urls, adding additional resource to polite r package

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -209,7 +209,9 @@ canlang_data
 We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a **U**niform **R**esource **L**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
 
 ```{r}
-canlang_data <- read_csv("https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv")
+canlang_data <- read_csv(
+    "https://raw.githubusercontent.com/UBC-DSCI/
+    introduction-to-datascience/master/data/can_lang.csv")
 canlang_data
 ```
 
@@ -888,3 +890,4 @@ data you are requesting and how frequently you are making requests.
 - If you read the subsection on obtaining data from the web via scraping and APIs, we provide two companion tutorial video links:
     - [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting the price and size data for apartment listings on CraigsList
     - [Another brief video tutorial](https://www.youtube.com/embed/O9HKbdhqYzk) on using the SelectorGadget tool to obtain desired CSS selectors for extracting Canadian city names and 2016 census populations from Wikipedia
+- The [polite package](https://cran.r-project.org/web/packages/polite/index.html) provides a set of tools for responsibly scraping data from websites. 
