--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -170,6 +170,7 @@ canlang_data <- read_csv("data/can_lang_meta-data.csv",
 canlang_data
 ```
 
+
 ### `read_delim` as a more flexible method to get tabular data into R
 
 When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same data set has no column names and uses tabs as the delimiter instead of commas. 
@@ -220,7 +221,7 @@ canlang_data
 In all the examples above, we gave you previews of the data file before we read it into R. This is essential so that you can see whether or not there are column names, what the 
 delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files.
 
-## Reading data from a Microsoft Excel file
+## Reading tabular data from a Microsoft Excel file
 
 There are many other ways to store tabular data sets beyond plain text files, and similarly, many ways to load those data sets into R. For example, it is very common to encounter,
 and need to load into R, data stored as a Microsoft Excel spreadsheet (with the filename extension `.xlsx`). 
@@ -276,6 +277,21 @@ canlang_data
 If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to specify the sheet number or name. You can also specify cell ranges using the `range` argument. This functionality is useful when a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets because multiple tables makes reading in data more difficult).
 
 As with plain text files, you should always explore the data file before importing it into R. Exploring the data beforehand helps you decide which arguments you need to to load the data into R successfully. If you do not have the Excel program on your computer, you can use other programs to preview the file. Examples include Google Sheets and Libre Office. 
+
+In Table we summarize the `read_*` functions we covered in this chapter and include some other functions that read in different file formats, such as `read_tsv` as another way to read in tab-separated data and `read_csv2` for data separated by semicolons `;`. 
+
+**Summary of `read_*` functions**
+
+Data File Type | R Function | R Package
+-- | -- | --
+Comma (`,`) separated files | `read_csv()` | `readr`
+Tab (`\t`) separated files  | `read_tsv()` | `readr`
+Semicolon (`;`) separated files |  `read_csv2()` | `readr`
+Various formats (`.csv`, `.tsv`)   | `read_delim()` | `readr`
+Excel files (`.xlsx`) | `read_excel()` | `readxl`
+
+> Note: `readr` is a part of the `tidyverse` package so we did not need to load this package separately since we loaded `tidyverse`.
+
 
 ## Reading data from a database
 
