added table name

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -278,9 +278,11 @@ If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to
 
 As with plain text files, you should always explore the data file before importing it into R. Exploring the data beforehand helps you decide which arguments you need to to load the data into R successfully. If you do not have the Excel program on your computer, you can use other programs to preview the file. Examples include Google Sheets and Libre Office. 
 
-In Table we summarize the `read_*` functions we covered in this chapter and include some other functions that read in different file formats, such as `read_tsv` as another way to read in tab-separated data and `read_csv2` for data separated by semicolons `;`. 
+In Table \@ref(tab:read-table) we summarize the `read_*` functions we covered in this chapter. We also include some other handy functions that read in different file formats, such as `read_tsv` as another way to read in tab-separated data and `read_csv2` for data separated by semicolons `;`. 
 
-**Summary of `read_*` functions**
+
+
+Table: (\#tab:read-table) Summary of `read_*` functions
 
 Data File Type | R Function | R Package
 -- | -- | --
