adding missing hash

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -99,7 +99,7 @@ on each computer) and where the files and folders happen to be located on that p
 
 ## Reading tabular data from a plain text file into R
 
-## `read_csv` to read in comma-separated files
+### `read_csv` to read in comma-separated files
 
 Now we will learn more about reading tabular data from a plain text file (a document containing only text) into R, as well as how to write tabular data to a file. 
 Last chapter, we learned about using the `tidyverse` `read_csv` function when reading files that match that function's expected defaults 
