adding reference to here package, rewording beginning paragraph to explain function and where/how data

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(message = FALSE)
 
 ## Overview 
 
-In this chapter, you’ll learn to read tabular data of various formats into R from your local device and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
+In this chapter, you’ll learn to read tabular data of various formats into R from your local device (e.g. your laptop) and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
 
 ## Chapter learning objectives
 By the end of the chapter, readers will be able to:
@@ -45,7 +45,8 @@ By the end of the chapter, readers will be able to:
 
 ## Absolute and relative file paths
 
-When you load a data set into R, you first need to tell R where those files live. The file could live on your 
+
+We will discuss the different functions we can use to import data into R, but before we can discuss *how* we read the data into R with these functions, we first need to talk about *where* the data lives. When you load a data set into R, you first need to tell R where those files live. The file could live on your 
 computer (*local*) or somewhere on the internet (*remote*). In this section, we will discuss the case where the file lives on your computer.
 
 The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
@@ -101,10 +102,9 @@ on each computer) and where the files and folders happen to be located on that p
 
 ### `read_csv` to read in comma-separated files
 
-Now we will learn more about reading tabular data from a plain text file (a document containing only text) into R, as well as how to write tabular data to a file. 
-Last chapter, we learned about using the `tidyverse` `read_csv` function when reading files that match that function's expected defaults 
+Now that we have learned about *where* data could be, we will learn about *how* to import tabular data into R using various functions. Specifically, we will learn about reading tabular data from a plain text file (a document containing only text) into R and how to write tabular data to a file. The function we use will depend on the file's format. For example, the last chapter, we learned about using the `tidyverse` `read_csv` function when reading .csv files that match the expected defaults 
 (column names are present, and commas are used as the separator between columns). In this section, we will learn how to read 
-files that do not satisfy the default expectations of `read_csv`. 
+files that do not satisfy the default expectations of `read_csv`.
 
 Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the more straightforward
 case where the defaults hold, and the only argument we need to give to the function is the path to the file, `data/can_lang.csv`. The `can_lang` data set contains language data from the 2016 Canadian census. We put `data/` before the file's name when we are loading the data set because this data set is located in a sub-folder, named `data`, relative to where we are running our R code.
@@ -905,6 +905,7 @@ data you are requesting and how frequently you are making requests.
 - The [`readr` page on the tidyverse website](https://readr.tidyverse.org/) is where you should look if you want to learn more about the functions in this chapter, the full set of arguments you can use, and other related functions. The site also provides a very nice cheat sheet that summarizes many of the data wrangling functions from this chapter.
 - Sometimes you might run into data in such poor shape that none of the reading functions we cover in this chapter works. In that case, you can consult the [data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/), which goes into a lot more detail about how R parses text from files into data frames.
 - The documentation for many of the reading functions we cover in this chapter can be found [on the tidyverse website](https://readr.tidyverse.org/reference/read_delim.html). This site shows you the full set of arguments available for each function.
+- The [here package](https://cran.r-project.org/web/packages/here/index.html) provides a way for you to contruct or find your files' paths. 
 - The [rio package](https://github.com/leeper/rio) provides an alternative set of tools for reading and writing data in R. It aims to be a "Swiss army knife" for data reading/writing/converting, and supports a wide variety of data types (including data formats generated by other statistical software like SPSS and SAS).
 - This [video](https://www.youtube.com/embed/ephId3mYu9o) from the [Udacity course "Linux Command Line Basics"](https://www.udacity.com/course/linux-command-line-basics--ud595)* provides a good explanation of absolute versus relative paths.
 - If you read the subsection on obtaining data from the web via scraping and APIs, we provide two companion tutorial video links:
